--- a/style.css
+++ b/style.css
@@ -182,6 +182,46 @@ z-index: -1;
     background-color: rgb(22, 22, 70);
 }
 
+#listing-7{
+    width: 350px;
+    background-color: rgb(22, 22, 70);
+}
+
+#listing-8 {
+    width: 350px;
+    background-color: rgb(22, 22, 70);
+}
+
+#listing-9 {
+    width: 350px;
+    background-color: rgb(22, 22, 70);
+}
+
+#listing-10 {
+    width: 350px;
+    background-color: rgb(22, 22, 70);
+}
+
+#listing-11 {
+    width: 350px;
+    background-color: rgb(22, 22, 70);
+}
+
+#listing-12 {
+    width: 350px;
+    background-color: rgb(22, 22, 70);
+}
+
+#listing-13 {
+    width: 350px;
+    background-color: rgb(22, 22, 70);
+}
+
+#listing-14 {
+    width: 350px;
+    background-color: rgb(22, 22, 70);
+}
+
 .grid-seh {
     display: grid;
    grid-template-columns: 1fr 1fr 1fr;
